--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Nurafian Zulkifli and I recently graduated from Singapore Polytechnic.
+          <p>My name is Nurafian Zulkifli and I'm a graduand from Singapore Polytechnic.
             My interest revolves mainly around designs, public transport signages and many other illustrations. </p>
         </div>
 
@@ -353,9 +353,9 @@
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/sgnM.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="MRT Signages Concept/Replications"><i class="bx bx-plus"></i></a>
+                    class="portfolio-lightbox" title="MRT Signages Concept/Replications"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
+                    title="Portfolio Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -369,9 +369,9 @@
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/creM.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="More Replications"><i class="bx bx-plus"></i></a>
+                    class="portfolio-lightbox" title="More Replications"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
+                    title="Portfolio Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -385,9 +385,9 @@
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/pidsM.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="LTA Bus PIDS Redesign"><i class="bx bx-plus"></i></a>
+                    class="portfolio-lightbox" title="LTA Bus PIDS Redesign"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
+                    title="Portfolio Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
             </div>
