2023-04 Feature Update to Version Next

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
               NRFZ</span></a>
         </li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <li><a href="https://nurafianzulkifli.com" class="nav-link scrollto"><i class="bi bi-arrow-return-left"></i><span>Back to the Current Look!</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
