2023-04 Feature Update to Version Next

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               NRFZ</span></a>
         </li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-        <li><a href="https://nurafianzulkifli.com" class="nav-link scrollto"><i class="bi bi-arrow-return-left"></i><span>Back to the Current Look!</span></a></li>
+        <li><a href="https://nurafianzulkifli.com" class="nav-link scrollto"><i class="bi bi-arrow-return-left"></i><span>Back to the Current Look</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -56,7 +56,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <p><span class="typed" data-typed-items="Hello! My name is, Hello! Nama Saya"></span></p>
+      <p><span class="typed" data-typed-items="Hello! My name is, Hello! Nama Saya, This page is still under development."></span></p>
       <h1>Nurafian Zulkifli</h1>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
