2023-04 Feature Update to Version Next

--- a/index.html
+++ b/index.html
@@ -349,12 +349,12 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/sgnM.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>MRT Signages Concept/Replications</h4>
+                <h4>MRT Signages Concept/Replications S2</h4>
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/sgnM.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="MRT Signages Concept/Replications"><i class="bi bi-zoom-in"></i></a>
-                  <a href="worksbynrfz/mrt-signage-rep.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
@@ -393,12 +393,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/a22lion.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
+                <h4>MAN A22 Lion Mascot Replication</h4>
+                <p>Concepts & Replications</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/a22lion.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
@@ -409,12 +409,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/mrtsgnM.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 2</h4>
-                <p>Web</p>
+                <h4>MRT Signages Concept/Replications S1</h4>
+                <p>Concepts & Replications</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/mrtsgnM.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
@@ -425,12 +425,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/busRep.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 3</h4>
-                <p>App</p>
+                <h4>Bus Replications</h4>
+                <p>Concepts & Replications</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/busRep.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
@@ -445,8 +445,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/ezlink.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Card</p>
+                <h4>EZ-Link Card Redesign</h4>
+                <p>Concepts & Replications</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/ezlink.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
@@ -457,12 +457,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-id">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/igra1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 3</h4>
-                <p>Card</p>
+                <h4>Infographic Resume</h4>
+                <p>Infographic Design</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/igra1.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
@@ -473,12 +473,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ld">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/ffl.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Friends Forever Logo Design</h4>
+                <p>Logo Design</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/ffl.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
