--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
               NRFZ</span></a>
         </li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <li><a href="https://nurafianzulkifli.com" class="nav-link scrollto"><i class='bx bx-arrow-back'></i> <span>Return to Current Look</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
