2023-04 Feature Update to Version Next

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
               NRFZ</span></a>
         </li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-        <li><a href="https://nurafianzulkifli.com" class="nav-link scrollto"><i class='bx bx-arrow-back'></i> <span>Return to Current Look</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -348,12 +347,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/sgnM.png" class="img-fluid" alt="">
+              <img src="https://i.imgur.com/snZqYJ3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>MRT Signages Concept/Replications S2</h4>
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/sgnM.png" data-gallery="portfolioGallery"
+                  <a href="https://i.imgur.com/snZqYJ3.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="MRT Signages Concept/Replications"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bi bi-info-circle-fill"></i></a>
@@ -364,14 +363,14 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/creM.png" class="img-fluid" alt="">
+              <img src="https://i.imgur.com/wXn720I.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>More Replications</h4>
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/creM.png" data-gallery="portfolioGallery"
+                  <a href="https://i.imgur.com/wXn720I.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="More Replications"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="worksbynrfz/more-rep.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
@@ -380,14 +379,14 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/pidsM.png" class="img-fluid" alt="">
+              <img src="https://i.imgur.com/dl2R8ZY.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>LTA Bus PIDS Redesign</h4>
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/pidsM.png" data-gallery="portfolioGallery"
+                  <a href="https://i.imgur.com/dl2R8ZY.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="LTA Bus PIDS Redesign"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="worksbynrfz/lta-pids.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
@@ -396,12 +395,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/a22lion.png" class="img-fluid" alt="">
+              <img src="https://i.imgur.com/uYfevZF.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>MAN A22 Lion Mascot Replication</h4>
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/a22lion.png" data-gallery="portfolioGallery"
+                  <a href="https://i.imgur.com/uYfevZF.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -412,12 +411,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/mrtsgnM.png" class="img-fluid" alt="">
+              <img src="https://i.imgur.com/oRcN6NQ.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>MRT Signages Concept/Replications S1</h4>
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/mrtsgnM.png" data-gallery="portfolioGallery"
+                  <a href="https://i.imgur.com/oRcN6NQ.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -428,12 +427,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/busRep.png" class="img-fluid" alt="">
+              <img src="https://i.imgur.com/RDNwcvC.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Bus Replications</h4>
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/busRep.png" data-gallery="portfolioGallery"
+                  <a href="https://i.imgur.com/RDNwcvC.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -444,12 +443,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/ezlink.png" class="img-fluid" alt="">
+              <img src="https://i.imgur.com/z9t4Cwl.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>EZ-Link Card Redesign</h4>
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/ezlink.png" data-gallery="portfolioGallery"
+                  <a href="https://i.imgur.com/z9t4Cwl.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -460,12 +459,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-id">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/igra1.png" class="img-fluid" alt="">
+              <img src="https://i.imgur.com/zDfpCEQ.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Infographic Resume</h4>
                 <p>Infographic Design</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/igra1.png" data-gallery="portfolioGallery"
+                  <a href="https://i.imgur.com/zDfpCEQ.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -476,12 +475,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-ld">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/ffl.png" class="img-fluid" alt="">
+              <img src="https://i.imgur.com/1HQJOAC.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Friends Forever Logo Design</h4>
                 <p>Logo Design</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/ffl.png" data-gallery="portfolioGallery"
+                  <a href="https://i.imgur.com/1HQJOAC.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
