--- a/worksbynrfz/more-rep.html
+++ b/worksbynrfz/more-rep.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MRT Signages Concept/Replications S2</title>
+  <title>More Replications</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,23 +46,23 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/snZqYJ3.png" alt="">
+                  <img src="https://i.imgur.com/wXn720I.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/0Ekr0nw.png" alt="">
+                  <img src="https://i.imgur.com/vVXTrdM.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/2P9DDLD.png" alt="">
+                  <img src="https://i.imgur.com/OysuYYZ.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/ekAv4r7.png" alt="">
+                  <img src="https://i.imgur.com/jLUGyMR.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/zjG3SMb.png" alt="">
+                  <img src="https://i.imgur.com/3c9InJu.png" alt="">
                 </div>
 
               </div>
@@ -80,13 +80,11 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>MRT Signages Concept/Replications S2</h2>
+              <h2>More Replications</h2>
               <p>
-                Ever taken the brown line (heh, poop colour)? Some of these may look familiar to you. But I've injected
-                some of my improvements in the designs in here.
-
-                The first picture - The Yew Tee Train Timings, were made way back in 2021. But the real-life counterpart
-                is shockingly similiar.
+                Aside from Buses only, I attempted to replicate Trains, Cars and Lorries too. The classic bus was an
+                experimental work, because hey, I wasn't born yet, so I didn't know how the buses actually looked like
+                exactly.
               </p>
             </div>
           </div>
