2023-04 Feature Update to Version Next

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                   <a href="https://i.imgur.com/snZqYJ3.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="MRT Signages Concept/Replications"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bi bi-info-circle-fill"></i></a>
+                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -372,7 +372,7 @@
                   <a href="https://i.imgur.com/wXn720I.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="More Replications"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/more-rep.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bi bi-info-circle-fill"></i></a>
+                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -388,7 +388,7 @@
                   <a href="https://i.imgur.com/dl2R8ZY.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="LTA Bus PIDS Redesign"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/lta-pids.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bi bi-info-circle-fill"></i></a>
+                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -402,9 +402,9 @@
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/uYfevZF.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
+                    class="portfolio-lightbox" title="MAN A22 Lion Mascot Replication"><i class="bi bi-zoom-in"></i></a>
+                  <a href="worksbynrfz/man-a22-masc.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -418,9 +418,9 @@
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/oRcN6NQ.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                    class="portfolio-lightbox" title="MRT Signages Concept/Replications S1"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
+                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -434,9 +434,9 @@
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/RDNwcvC.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                    class="portfolio-lightbox" title="Bus Replications"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
+                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -450,9 +450,9 @@
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/z9t4Cwl.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                    class="portfolio-lightbox" title="EZ-Link Card Redesign"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
+                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -466,9 +466,9 @@
                 <p>Infographic Design</p>
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/zDfpCEQ.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
+                    class="portfolio-lightbox" title="Infographic Resume"><i class="bi bi-zoom-in"></i></a>
+                  <a href="worksbynrfz/igra1.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -482,9 +482,9 @@
                 <p>Logo Design</p>
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/1HQJOAC.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                    class="portfolio-lightbox" title="Friends Forever Logo Design"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
+                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
             </div>
