--- a/worksbynrfz/igra1.html
+++ b/worksbynrfz/igra1.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MRT Signages Concept/Replications</title>
+  <title>Infographic Design</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,23 +46,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/sgnM.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/sgnM1.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/sgnM2.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/sgnM3.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/sgnM4.png" alt="">
+                  <img src="https://imgur.com/mq6xG7W.png" alt="">
                 </div>
 
               </div>
@@ -75,18 +59,14 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Concepts & Replications</li>
-                <li><strong>Project Year</strong>: 2023</li>
+                <li><strong>Project Year</strong>: 2020</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#"></a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>MRT Signages Concept/Replications</h2>
+              <h2>Infographic Design</h2>
               <p>
-                Ever taken the brown line (heh, poop colour)? Some of these may look familiar to you. But I've injected
-                some of my improvements in the designs in here.
-
-                The first picture - The Yew Tee Train Timings, were made way back in 2021. But the real-life counterpart
-                is shockingly similiar.
+                A submission for an assignment to turn my Resume into an Infographic Version.
               </p>
             </div>
           </div>
