2023-04 Feature Update to Version Next

--- a/index.html
+++ b/index.html
@@ -346,6 +346,22 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-wd">
+            <div class="portfolio-wrap">
+              <img src="https://i.imgur.com/dN3zoF8.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Wayfinding? Right this way. - Improving PT Signages</h4>
+                <p>Website Design</p>
+                <div class="portfolio-links">
+                  <a href="https://i.imgur.com/dN3zoF8.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="More Replications"><i class="bi bi-zoom-in"></i></a>
+                  <a href="worksbynrfz/wayfind.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
             <div class="portfolio-wrap">
               <img src="https://i.imgur.com/snZqYJ3.png" class="img-fluid" alt="">
@@ -419,7 +435,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/oRcN6NQ.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="MRT Signages Concept/Replications S1"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="worksbynrfz/mrt-signage-rep-s1.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
