2023-04 Feature Update to Version Next

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/1HQJOAC.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="Friends Forever Logo Design"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="worksbynrfz/ffl.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
