--- a/worksbynrfz/mrt-signage-rep-s1.html
+++ b/worksbynrfz/mrt-signage-rep-s1.html
@@ -46,23 +46,23 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/snZqYJ3.png" alt="">
+                  <img src="https://i.imgur.com/M29w8Vo.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/0Ekr0nw.png" alt="">
+                  <img src="https://i.imgur.com/F6l7ARp.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/2P9DDLD.png" alt="">
+                  <img src="https://i.imgur.com/4waCiFN.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/ekAv4r7.png" alt="">
+                  <img src="https://i.imgur.com/LDxivRm.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/zjG3SMb.png" alt="">
+                  <img src="https://i.imgur.com/ov9ektF.png" alt="">
                 </div>
 
               </div>
