--- a/worksbynrfz/wayfind.html
+++ b/worksbynrfz/wayfind.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Infographic Design</title>
+  <title>Wayfinding? Right this way. - Improving PT Signages</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -58,15 +58,18 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Concepts & Replications</li>
-                <li><strong>Project Year</strong>: 2020</li>
-                <li><strong>Project URL</strong>: <a href="https://nurafianzulkifli.github.io/signages-nrfz/">Wayfinding? Right this way.</a></li>
+                <li><strong>Category</strong>: Website Design</li>
+                <li><strong>Project Year</strong>: 2020 - Present</li>
+                <li><strong>Project URL</strong>: <a
+                    href="https://nurafianzulkifli.github.io/signages-nrfz/">Wayfinding? Right this way.</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Infographic Design</h2>
+              <h2>Wayfinding? Right this way. - Improving PT Signages</h2>
               <p>
-                A submission for an assignment to turn my Resume into an Infographic Version.
+                An in-depth UX Research Website, on the new Wayfinding system. In this website, I laid down my
+                observations and noted down the flaws the new Wayfinding System has brought. I also included my own
+                concepts as to how I wished it could be done better.
               </p>
             </div>
           </div>
