--- a/worksbynrfz/ffl.html
+++ b/worksbynrfz/ffl.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>More Replications</title>
+  <title>Friends Forever Logo Design</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,17 +46,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/795QJZl.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="https://i.imgur.com/d4kGGWd.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <video width="100%" height="511" controls loop>
-                    <source src="https://imgur.com/k8Qf5C1.mp4" type="video/mp4">
-                  </video>
+                  <img src="https://i.imgur.com/1HQJOAC.png" alt="">
                 </div>
 
               </div>
@@ -68,24 +58,16 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Concepts & Replications</li>
-                <li><strong>Project Year</strong>: 2023</li>
+                <li><strong>Category</strong>: Logo Design</li>
+                <li><strong>Project Year</strong>: 2017</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#"></a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>More Replications</h2>
+              <h2>Friends Forever Logo Design</h2>
               <p>
-                My take on the redesign of LTA's Bus Passenger Information Display System (PIDS). <br><br>
-
-               <i class="bi-arrow-right-circle-fill"></i> Picture 1:
-               PIDS UI - UI showing the Next Stop (Top) and UI showing the Stop the Bus is currently at (Bottom) <br><br>
-               
-               <i class="bi-arrow-right-circle-fill"></i> Picture 2:
-               PIDS UI - UI showing when the Bus Stopping Bell is pressed (Top) and UI showing the aftermath of it (Bottom) <br><br>
-               
-               <i class="bi-arrow-right-circle-fill"></i> Video:
-               PIDS UI - UI in action <br><br>
+                A submission for a logo competition based on the theme "Friends Forever", conducted by ITE College
+                West's School of Electronics and Infocomm Technology.
               </p>
             </div>
           </div>
